fix(ci): ci error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,14 +6,20 @@ on:
       - 'v*' # 推送 tag 时触发，如 v1.0.0
   workflow_dispatch: # 允许手动触发
 
+permissions:
+  contents: write
+
 jobs:
-  build:
+  # 构建 Windows 版本
+  build-windows:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-22.04, windows-latest]
-
-    runs-on: ${{ matrix.platform }}
+        include:
+          - arch: x86_64
+            runner: windows-latest
+    
+    runs-on: ${{ matrix.runner }}
     
     steps:
       - name: 检出代码
@@ -33,26 +39,7 @@ jobs:
           version: 8
           run_install: false
 
-      - name: 获取 pnpm store 目录
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: 设置 pnpm 缓存
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: 安装 Ubuntu 依赖
-        if: matrix.platform == 'ubuntu-22.04'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: 安装前端依赖
+      - name: 安装依赖
         run: pnpm install
 
       - name: 构建应用
@@ -65,13 +52,189 @@ jobs:
           releaseBody: |
             ## 📦 下载说明
             
-            - **Windows**: 下载 `.msi` 或 `.exe` 安装包
-            - **macOS**: 下载 `.dmg` 或 `.app.tar.gz` 文件
-            - **Linux**: 下载 `.AppImage` 或 `.deb` 文件
+            - **Windows (x64)**: 下载 `.msi` 或 `.exe` 安装包
+            - **macOS (Intel)**: 下载 `x86_64.dmg` 文件
+            - **macOS (Apple Silicon)**: 下载 `aarch64.dmg` 文件
+            - **Linux (x64)**: 下载 `amd64.AppImage` 或 `.deb` 文件
+            - **Linux (ARM64)**: 下载 `arm64.AppImage` 或 `.deb` 文件
             
             ### 更新内容
             请查看 [提交历史](https://github.com/${{ github.repository }}/commits/${{ github.ref_name }})
+            
+            ---
+            
+            构建于: ${{ github.event.head_commit.timestamp }}
           releaseDraft: false
           prerelease: false
-          args: ${{ matrix.platform == 'macos-latest' && '--target universal-apple-darwin' || '' }}
+
+  # 构建 macOS 版本
+  build-macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - arch: x86_64
+            runner: macos-13  # Intel-based macOS runner
+            target: x86_64-apple-darwin
+          - arch: aarch64
+            runner: macos-latest  # Apple Silicon macOS runner
+            target: aarch64-apple-darwin
+    
+    runs-on: ${{ matrix.runner }}
+    
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 安装 Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 安装 Rust 稳定版
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
+      - name: 安装 pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+
+      - name: Rust 缓存
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
+
+      - name: 安装依赖
+        run: pnpm install
+
+      - name: 构建应用
+        uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tagName: ${{ github.ref_name }}
+          releaseName: 'MAA 日志分析器 ${{ github.ref_name }}'
+          releaseBody: |
+            ## 📦 下载说明
+            
+            - **Windows (x64)**: 下载 `.msi` 或 `.exe` 安装包
+            - **macOS (Intel)**: 下载 `x86_64.dmg` 文件
+            - **macOS (Apple Silicon)**: 下载 `aarch64.dmg` 文件
+            - **Linux (x64)**: 下载 `amd64.AppImage` 或 `.deb` 文件
+            - **Linux (ARM64)**: 下载 `arm64.AppImage` 或 `.deb` 文件
+            
+            ### 更新内容
+            请查看 [提交历史](https://github.com/${{ github.repository }}/commits/${{ github.ref_name }})
+            
+            ---
+            
+            构建于: ${{ github.event.head_commit.timestamp }}
+          releaseDraft: false
+          prerelease: false
+          args: --target ${{ matrix.target }}
+
+  # 构建 Linux 版本
+  build-linux:
+    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [x86_64, aarch64]
+    
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 安装 Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 安装 Rust 稳定版
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.arch == 'aarch64' && 'aarch64-unknown-linux-gnu' || 'x86_64-unknown-linux-gnu' }}
+
+      - name: 安装 pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+
+      - name: Rust 缓存
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: './src-tauri -> target'
+
+      - name: 安装系统依赖
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+
+      - name: 安装 ARM64 交叉编译工具
+        if: matrix.arch == 'aarch64'
+        run: |
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+
+      - name: 安装依赖
+        run: pnpm install
+
+      - name: 构建应用 (x86_64)
+        if: matrix.arch == 'x86_64'
+        uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tagName: ${{ github.ref_name }}
+          releaseName: 'MAA 日志分析器 ${{ github.ref_name }}'
+          releaseBody: |
+            ## 📦 下载说明
+            
+            - **Windows (x64)**: 下载 `.msi` 或 `.exe` 安装包
+            - **macOS (Intel)**: 下载 `x86_64.dmg` 文件
+            - **macOS (Apple Silicon)**: 下载 `aarch64.dmg` 文件
+            - **Linux (x64)**: 下载 `amd64.AppImage` 或 `.deb` 文件
+            - **Linux (ARM64)**: 下载 `arm64.AppImage` 或 `.deb` 文件
+            
+            ### 更新内容
+            请查看 [提交历史](https://github.com/${{ github.repository }}/commits/${{ github.ref_name }})
+            
+            ---
+            
+            构建于: ${{ github.event.head_commit.timestamp }}
+          releaseDraft: false
+          prerelease: false
+
+      - name: 构建应用 (aarch64)
+        if: matrix.arch == 'aarch64'
+        uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PKG_CONFIG_SYSROOT_DIR: /usr/aarch64-linux-gnu
+          CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
+          CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
+        with:
+          tagName: ${{ github.ref_name }}
+          releaseName: 'MAA 日志分析器 ${{ github.ref_name }}'
+          releaseBody: |
+            ## 📦 下载说明
+            
+            - **Windows (x64)**: 下载 `.msi` 或 `.exe` 安装包
+            - **macOS (Intel)**: 下载 `x86_64.dmg` 文件
+            - **macOS (Apple Silicon)**: 下载 `aarch64.dmg` 文件
+            - **Linux (x64)**: 下载 `amd64.AppImage` 或 `.deb` 文件
+            - **Linux (ARM64)**: 下载 `arm64.AppImage` 或 `.deb` 文件
+            
+            ### 更新内容
+            请查看 [提交历史](https://github.com/${{ github.repository }}/commits/${{ github.ref_name }})
+            
+            ---
+            
+            构建于: ${{ github.event.head_commit.timestamp }}
+          releaseDraft: false
+          prerelease: false
+          args: --target aarch64-unknown-linux-gnu
 
