fix(ci): ci error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -177,7 +177,7 @@ jobs:
             ## 📦 下载说明
 
             ### Windows (x64)
-            - 下载 `.msi` 或 `.exe` 安装包
+            - 下载 `.exe` 安装包
 
             ### macOS (Intel 芯片)
             - 下载 `x86_64.dmg` 文件
@@ -197,8 +197,7 @@ jobs:
           draft: false
           prerelease: false
           files: |
-            artifacts/*/bundle/msi/*.msi
-            artifacts/*/bundle/msi/*.exe
+            artifacts/*/bundle/nsis/*.exe
             artifacts/*/bundle/dmg/*.dmg
             artifacts/*/bundle/macos/*.app.tar.gz
             artifacts/*/bundle/deb/*.deb
