--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -75,3 +75,11 @@ jobs:
       - name: Tauri 构建测试
         run: pnpm run tauri build
 
+      - name: 上传构建产物
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform }}-build
+          path: src-tauri/target/release/bundle/
+          if-no-files-found: warn
+          retention-days: 7
+
