--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
         "version": "node scripts/bump-version.js"
     },
     "dependencies": {
-        "vue": "^3.4.0",
-        "naive-ui": "^2.38.0",
+        "@tauri-apps/api": "^1.5.3",
         "@vicons/antd": "^0.12.0",
-        "@tauri-apps/api": "^1.5.3"
+        "naive-ui": "^2.38.0",
+        "vue": "^3.4.0"
     },
     "devDependencies": {
+        "@tauri-apps/cli": "^1.5.9",
+        "@types/node": "^25.0.2",
         "@vitejs/plugin-vue": "^5.0.0",
         "typescript": "^5.3.0",
         "vite": "^5.0.0",
-        "vue-tsc": "^2.0.0",
-        "@tauri-apps/cli": "^1.5.9"
+        "vue-tsc": "^2.0.0"
     }
 }
