--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "@vicons/antd": "^0.12.0",
         "highlight.js": "^11.11.1",
         "naive-ui": "^2.38.0",
-        "vue": "^3.4.0"
+        "vue": "^3.4.0",
+        "vue-virtual-scroller": "2.0.0-beta.8"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^1.5.9",
